tests/ui/asm/riscv/bad-reg.riscv32i.stderr
error: invalid register `s1`: s1 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:43:18
   |
LL |         asm!("", out("s1") _);
   |                  ^^^^^^^^^^^

error: invalid register `fp`: the frame pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:45:18
   |
LL |         asm!("", out("fp") _);
   |                  ^^^^^^^^^^^

error: invalid register `sp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:47:18
   |
LL |         asm!("", out("sp") _);
   |                  ^^^^^^^^^^^

error: invalid register `gp`: the global pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:49:18
   |
LL |         asm!("", out("gp") _);
   |                  ^^^^^^^^^^^

error: invalid register `tp`: the thread pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:51:18
   |
LL |         asm!("", out("tp") _);
   |                  ^^^^^^^^^^^

error: invalid register `zero`: the zero register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:53:18
   |
LL |         asm!("", out("zero") _);
   |                  ^^^^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:118:18
   |
LL |         asm!("", in("v0") x);
   |                  ^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:121:18
   |
LL |         asm!("", out("v0") x);
   |                  ^^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:124:26
   |
LL |         asm!("/* {} */", in(vreg) x);
   |                          ^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:127:26
   |
LL |         asm!("/* {} */", out(vreg) _);
   |                          ^^^^^^^^^^^

error: register class `freg` requires at least one of the following target features: d, f
  --> $DIR/bad-reg.rs:104:26
   |
LL |         asm!("/* {} */", in(freg) f);
   |                          ^^^^^^^^^^

error: register class `freg` requires at least one of the following target features: d, f
  --> $DIR/bad-reg.rs:106:26
   |
LL |         asm!("/* {} */", out(freg) _);
   |                          ^^^^^^^^^^^

error: register class `freg` requires at least one of the following target features: d, f
  --> $DIR/bad-reg.rs:108:26
   |
LL |         asm!("/* {} */", in(freg) d);
   |                          ^^^^^^^^^^

error: register class `freg` requires at least one of the following target features: d, f
  --> $DIR/bad-reg.rs:111:26
   |
LL |         asm!("/* {} */", out(freg) d);
   |                          ^^^^^^^^^^^

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:118:27
   |
LL |         asm!("", in("v0") x);
   |                           ^
   |
   = note: register class `vreg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:121:28
   |
LL |         asm!("", out("v0") x);
   |                            ^
   |
   = note: register class `vreg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:124:35
   |
LL |         asm!("/* {} */", in(vreg) x);
   |                                   ^
   |
   = note: register class `vreg` supports these types: 

error: aborting due to 17 previous errors

